# KernelEye

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TASK.md  test.cpp
include/: FileSystemMonitor.h  Logger.h  ProcessMonitor.h  SystemUtils.h
src/: FileSystemMonitor.cpp  Logger.cpp  ProcessMonitor.cpp  SystemUtils.cpp  main.cpp
